2006-11-23  Simon Budig  <simon@gimp.org>

	* libgimp/libgimp-sections.txt: follow name change.

	* libgimp/tmpl/gimpvectors.sgml: regenerated.

2006-11-23  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt: added new symbols.

	* libgimp/tmpl/gimpimage.sgml: regenerated

	* libgimp/libgimp-docs.sgml
	* libgimpbase/libgimpbase-docs.sgml
	* libgimpcolor/libgimpcolor-docs.sgml
	* libgimpconfig/libgimpconfig-docs.sgml
	* libgimpmath/libgimpmath-docs.sgml
	* libgimpmodule/libgimpmodule-docs.sgml
	* libgimpthumb/libgimpthumb-docs.sgml
	* libgimpwidgets/libgimpwidgets-docs.sgml: added id attributes for
	the index pages.

2006-11-20  Simon Budig  <simon@gimp.org>

        * libgimp/libgimp-sections.txt: moved new symbols to their
	resp. sections.

        * libgimp/tmpl/gimpfontselectbutton.sgml
        * libgimp/tmpl/gimptools.sgml
        * libgimp/tmpl/gimpvectors.sgml: regenerated

2006-11-16  Simon Budig  <simon@gimp.org>

	* libgimp/libgimp.types: removed double entry for
	gimp_font_select_button_get_type.

	* libgimp/tmpl/gimpfontselectbutton.sgml: regenerated.

2006-11-16  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-docs.sgml
	* libgimp/libgimp-sections.txt
	* libgimp/libgimp.types: follow gimpdrawablecombobox ->
	gimpitemcombobox move.

	* libgimp/tmpl/gimpdrawablecombobox.sgml: removed.

	* libgimp/tmpl/gimpitemcombobox.sgml: and readded as this file.

	* libgimp/tmpl/gimpfileops.sgml: regenerated.

2006-11-04  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimpbase/libgimpbase-sections.txt: updated.

	* libgimp/tmpl/gimpedit.sgml
	* libgimp/tmpl/gimpfileops.sgml
	* libgimp/tmpl/gimpfontselectbutton.sgml
	* libgimp/tmpl/gimpvectors.sgml
	* libgimpbase/tmpl/gimpbaseenums.sgml
	* libgimpconfig/tmpl/gimpcolorconfig.sgml: regenerated.

2006-10-26  Simon Budig  <simon@gimp.org>

        * devel-docs/libgimp/tmpl/gimppaths.sgml
	* devel-docs/libgimp/tmpl/gimpfontselectbutton.sgml
	* devel-docs/libgimp/tmpl/gimptools.sgml