@@ -1,3 +1,12 @@
+2006-11-27  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/Makefile.am
+	* libgimpcolor/Makefile.am
+	* libgimpmodule/Makefile.am: pass deprecation guards to gtkdoc-scan.
+
+	* libgimpconfig/libgimpconfig-sections.txt
+	* libgimpwidgets/libgimpwidgets-sections.txt: removed unused symbols.
+
 2006-11-23  Simon Budig  <simon@gimp.org>
 
 	* libgimp/libgimp-sections.txt: follow name change.
